--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ school
                 <div class="wwa">
                     <div class="www">
                         <div class="d1"><span class="material-symbols-outlined">phone_enabled</span> tel:<br> 502 708 665</div>
-                        <div class="d2"><span class="material-symbols-outlined">mail</span> mail:<br> dawid.mozdzonek@gmail.com</div>
+                        <div class="d2"><span class="material-symbols-outlined">mail</span> mail:<br> koala.@div.com</div>
                     </div>
 </section>
         <a href="#menues">
@@ -189,4 +189,5 @@ school
 </script>
 </body>
 </html>
+
 
