--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="stronam.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Document</title>
@@ -13,7 +12,7 @@
     <main>
   <div class="background-bar"></div>
  <section id="menues">
-      <div class="menu-toggle" id="menu-toggle">☰</div>
+      <div class="menu-toggle" id="menu-toggle">☰  Dawid Mozdzonek</div>
         <div class="menu" id="menu">
             <div class="imie"><p class="p1">Dawid<br>Możdżonek</p></div>
             <div class="spac"></div>
@@ -22,12 +21,12 @@
                 <div class="a0">O mnie <span class="material-symbols-outlined">account_circle</span></div>
                 </a>
                 <a href="#praca">
-                <div class="a0">blabla <span class="material-symbols-outlined">work</span></div>
+                <div class="a0">Praca <span class="material-symbols-outlined">work</span></div>
                 </a>
-                <div class="a0">blabla <span class="material-symbols-outlined">wb_incandescent</span></div>
+                <div class="a0">Zainteresowania <span class="material-symbols-outlined">wb_incandescent</span></div>
                 <div class="a0">Życie <span class="material-symbols-outlined">cardiology</span></div>
                 <a href="#kontakt">
-                <div class="a0">blabla<span class="material-symbols-outlined">phone_enabled</span></div>
+                <div class="a0">Kontakt<span class="material-symbols-outlined">phone_enabled</span></div>
                 </a>
             </div>
         </div> 
@@ -147,15 +146,15 @@ school
         </div>
         <div class="nauka">
             <pp><br><br></pp>
-            <pp>blabla – blabla<br>blabla<br></pp>
-            <p class="p2">blabla</p2>
+            <pp>2022 – 2025<br>Technikum<br></pp>
+            <p class="p2">Zespół Szkół Rzemiosł Artystycznych im. Stanisława Wyspiańskiego w Jeleniej Górze</p2>
             <pp><br><br></pp>
         </div>
 
         <div class="nauka">
             <pp><br><br></pp>
-            <pp>blabla<br>blabla<br></pp>
-            <p class="p2">blabla</p2>
+            <pp>2014 – 2022<br>Szkoła podstawowa<br></pp>
+            <p class="p2">Szkoła Podstawowa nr 104 im. Macieja Rataja w Warszawie</p2>
             <pp><br><br></pp>
         </div>
 <section id="kontakt">
@@ -164,7 +163,7 @@ school
                 <div class="wwa">
                     <div class="www">
                         <div class="d1"><span class="material-symbols-outlined">phone_enabled</span> tel:<br> 502 708 665</div>
-                        <div class="d2"><span class="material-symbols-outlined">mail</span> mail:<br> koala.@div.com</div>
+                        <div class="d2"><span class="material-symbols-outlined">mail</span> mail:<br> dawid.mozdzonek@gmail.com</div>
                     </div>
 </section>
         <a href="#menues">
@@ -187,7 +186,7 @@ school
     });
   });
 </script>
+<script src="script.js"></script>
 </body>
 </html>
-
 
