--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    !-- 📌 Sekcja dla wyszukiwarek -->
+    <title>Dawid Możdżonek - Oficjalna Strona</title>
+    <meta name="description" content="Oficjalna strona Dawida Możdżonka. Informacje, projekty i linki." />
+    <meta name="keywords" content="Dawid Możdżonek, Dawid Mozdzonek, portfolio, strona, netizen" />
+    <meta name="author" content="Dawid Możdżonek" />
+    <meta name="robots" content="index, follow" /
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -189,5 +195,6 @@ school
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
