--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     !-- 📌 Sekcja dla wyszukiwarek -->
     <title>Dawid Możdżonek - Oficjalna Strona</title>
+    <meta name="google-site-verification" content="DZpoqRTD-VFog4mJOwR_KJ9nFSuP5jKqvzC-oprephU" />
     <meta name="description" content="Oficjalna strona Dawida Możdżonka. Informacje, projekty i linki." />
     <meta name="keywords" content="Dawid Możdżonek, Dawid Mozdzonek, portfolio, strona, netizen" />
     <meta name="author" content="Dawid Możdżonek" />
@@ -195,6 +196,7 @@ school
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
