--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Oficjalna strona Dawida Możdżonka. Informacje, projekty i linki." />
     <meta name="keywords" content="Dawid Możdżonek, Dawid Mozdzonek, portfolio, strona, netizen" />
     <meta name="author" content="Dawid Możdżonek" />
-    <meta name="robots" content="index, follow" /
+    <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -195,6 +195,7 @@ school
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
