--- a/index.html
+++ b/index.html
@@ -14,30 +14,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
-    <main>
-  <div class="background-bar"></div>
- <section id="menues">
+ <header id="menues">
       <div class="menu-toggle" id="menu-toggle">☰  Dawid Mozdzonek</div>
         <div class="menu" id="menu">
-            <div class="imie"><p class="p1">Dawid<br>Możdżonek</p></div>
-            <div class="spac"></div>
-            <div class="kty">
-                <a href="#omnie">
-                <div class="a0">O mnie <span class="material-symbols-outlined">account_circle</span></div>
-                </a>
-                <a href="#praca">
-                <div class="a0">Praca <span class="material-symbols-outlined">work</span></div>
-                </a>
-                <div class="a0">Zainteresowania <span class="material-symbols-outlined">wb_incandescent</span></div>
-                <div class="a0">Życie <span class="material-symbols-outlined">cardiology</span></div>
-                <a href="#kontakt">
-                <div class="a0">Kontakt<span class="material-symbols-outlined">phone_enabled</span></div>
-                </a>
-            </div>
+            <h1 class="imie">Dawid<br>Możdżonek</h1>
+            <nav>
+                <ul>
+                    <li><a href="#omnie" class="a0">O mnie <span class="material-symbols-outlined">account_circle</span></a></li>
+                    <li><a href="#praca" class="a0">Praca <span class="material-symbols-outlined">work</span></a></li>
+                    <li><a href="#praca" class="a0">Zainteresowania <span class="material-symbols-outlined">wb_incandescent</span></a></li>
+                    <li><a href="#praca" class="a0">Życie <span class="material-symbols-outlined">cardiology</span></a></li>
+                    <li><a href="#kontakt" class="a0">Kontakt<span class="material-symbols-outlined">phone_enabled</span></a></li>
+                </ul>
+            </nav>
         </div> 
-    </div>
-    </section>  
-        <div class="centrum">
+ </header>  
+    <main>
+        <section class="centrum">
             <div class="content">
                 <header class="nagl">Cześć |</header>
                 <p class="ppp">Witaj na mojej stronie osobistej.
@@ -49,25 +42,25 @@ Mam nadzieję, że treści zawarte na stronie będą dla Ciebie interesujące i 
             <div class="obraz">
                 <div class="ing"></div>
             </div>
-        </div>
+        </section>
         <section id="praca">
         <div class="TRES">
-            <div class="div11">
+            <article>
                 <header class="podnag">ZAWÓD</header>
                 <p class="podp">Niezbyt mądry tweet nie dodaje prestiżu dziennikarzom internetowym, dla których praca w domu to chleb powszedni i najlepiej byłoby na takie wynurzenia spuścić zasłonę milczenia. Tymczasem rozpętała się wokół nich gorąca dyskusja. W jej ramach jeden z urzędników Ministerstwa Spraw Zagranicznych pochwalił się swoim rozkładem dnia: „Śniadanie. Maile. Telefony. Przejazd do MSZ. Sztab Kryzysowy. Maile. Rządowy Zespół Kryzysowy. Pierwsza kawa. Maile. Dyrektorzy. Depesze. Maile. Kanapka od żony. Maile. Wideokonf. Telefony. Wywiad. Maile. Telekonf. Sztab. Powrót. Wyrzuty sumienia przed dziećmi. Spanie. Śniadanie”. Wprawdzie zarobiony po pachy urzędnik skarży się, że nie ma wolnej chwili dla swoich pociech, ale znajduje czas na lans w mediach społecznościowych. Co zresztą zostało mu wypomniane: „Zapomniał Pan o Twitterze… dużo Pana tu”.</p>
-            </div>
-            <div class="div11">
+            </article>
+            <article>
                 <header class="podnag">DOŚWIAT</header>
                 <p class="podp">Niezbyt mądry tweet nie dodaje prestiżu dziennikarzom internetowym, dla których praca w domu to chleb powszedni i najlepiej byłoby na takie wynurzenia spuścić zasłonę milczenia. Tymczasem rozpętała się wokół nich gorąca dyskusja. W jej ramach jeden z urzędników Ministerstwa Spraw Zagranicznych pochwalił się swoim rozkładem dnia: „Śniadanie. Maile. Telefony. Przejazd do MSZ. Sztab Kryzysowy. Maile. Rządowy Zespół Kryzysowy. Pierwsza kawa. Maile. Dyrektorzy. Depesze. Maile. Kanapka od żony. Maile. Wideokonf. Telefony. Wywiad. Maile. Telekonf. Sztab. Powrót. Wyrzuty sumienia przed dziećmi. Spanie. Śniadanie”. Wprawdzie zarobiony po pachy urzędnik skarży się, że nie ma wolnej chwili dla swoich pociech, ale znajduje czas na lans w mediach społecznościowych. Co zresztą zostało mu wypomniane: „Zapomniał Pan o Twitterze… dużo Pana tu”.</p>
-            </div>
-            <div class="div11">
+            </article>
+            <article>
                 <header class="podnag">UMIEJEN</header>
                 <p class="podp">Niezbyt mądry tweet nie dodaje prestiżu dziennikarzom internetowym, dla których praca w domu to chleb powszedni i najlepiej byłoby na takie wynurzenia spuścić zasłonę milczenia. Tymczasem rozpętała się wokół nich gorąca dyskusja. W jej ramach jeden z urzędników Ministerstwa Spraw Zagranicznych pochwalił się swoim rozkładem dnia: „Śniadanie. Maile. Telefony. Przejazd do MSZ. Sztab Kryzysowy. Maile. Rządowy Zespół Kryzysowy. Pierwsza kawa. Maile. Dyrektorzy. Depesze. Maile. Kanapka od żony. Maile. Wideokonf. Telefony. Wywiad. Maile. Telekonf. Sztab. Powrót. Wyrzuty sumienia przed dziećmi. Spanie. Śniadanie”. Wprawdzie zarobiony po pachy urzędnik skarży się, że nie ma wolnej chwili dla swoich pociech, ale znajduje czas na lans w mediach społecznościowych. Co zresztą zostało mu wypomniane: „Zapomniał Pan o Twitterze… dużo Pana tu”.</p>
-            </div>
+            </article>
         </div>
         </section>
 
-        <div class="centrum2">
+        <section class="centrum2">
             <div class="content2">
                 <header class="nagl">Podróże   <span class="material-symbols-outlined">flight</span></header>
                 <p class="ppp">Podróżowanie od zawsze było dla mnie źródłem inspiracji i rozwoju. W trakcie moich licznych wyjazdów miałem okazję poznawać różne kultury, obyczaje i perspektywy, co pozwoliło mi poszerzyć horyzonty i lepiej rozumieć ludzi w różnych sytuacjach. Te doświadczenia nauczyły mnie elastyczności, otwartości na nowe wyzwania oraz umiejętności adaptacji w nieznanych środowiskach. Z czasem zauważyłem, że podróże nie tylko rozwijają zdolności praktyczne, ale także kształtują podejście do życia i pracy – uczą cierpliwości, empatii i doceniania różnorodności.</p>
@@ -113,7 +106,8 @@ Mam nadzieję, że treści zawarte na stronie będą dla Ciebie interesujące i 
 
                 <div class="ing2"></div>
             </div>
-        </div>
+        </section>
+        <section class="Galeria">
         <div class="wypo2">
         </div>
         <div class="nagl33">
@@ -128,9 +122,11 @@ Mam nadzieję, że treści zawarte na stronie będą dla Ciebie interesujące i 
             <div class="sytuacje" style="background-image: url(/Users/dawid/Desktop/stronaM/grozja1.jpg);"></div>
 
         </div>
+        </section>
         <div class="wypo2">
         </div>
-        <div class="nagl">
+        <section class="umiejętności">
+            <div class="nagl">
             <header class="nagl">Dodatkoewe umiejętności <span class="material-symbols-outlined">
 </span></header>
         </div>
@@ -140,37 +136,30 @@ Mam nadzieję, że treści zawarte na stronie będą dla Ciebie interesujące i 
              <div class="dokument" style="background-image: url(/Users/dawid/Desktop/stronaM/patent_rewers.png);"></div>  
              <div class="dokument" style="background-image: url(/Users/dawid/Desktop/stronaM/prawko01.png);"></div>
              <div class="dokument" style="background-image: url(/Users/dawid/Desktop/stronaM/prawko02.png);"></div>
-
         </div>
+        </section>
 <div class="wypo2">
         </div>
+        <section class="Edukacjia">
         <div class="nagl">
             <header class="nagl">Edukacjia <span class="material-symbols-outlined">
 school
 </span></header>
         </div>
         <div class="nauka">
-            <pp><br><br></pp>
-            <pp>2022 – 2025<br>Technikum<br></pp>
-            <p class="p2">Zespół Szkół Rzemiosł Artystycznych im. Stanisława Wyspiańskiego w Jeleniej Górze</p2>
-            <pp><br><br></pp>
+            <p><br><br></p>
+            <p>2022 – 2025<br>Technikum<br></p>
+            <p class="p2">Zespół Szkół Rzemiosł Artystycznych im. Stanisława Wyspiańskiego w Jeleniej Górze</p>
+            <p><br><br></p>
         </div>
 
         <div class="nauka">
-            <pp><br><br></pp>
-            <pp>2014 – 2022<br>Szkoła podstawowa<br></pp>
-            <p class="p2">Szkoła Podstawowa nr 104 im. Macieja Rataja w Warszawie</p2>
-            <pp><br><br></pp>
+            <p><br><br></p>
+            <p>2014 – 2022<br>Szkoła podstawowa<br></p>
+            <p class="p2">Szkoła Podstawowa nr 104 im. Macieja Rataja w Warszawie</p>
+            <p><br><br></p>
         </div>
-<section id="kontakt">
-        <div class="reszta">
-            <div class="danek">
-                <div class="wwa">
-                    <div class="www">
-                        <div class="d1"><span class="material-symbols-outlined">phone_enabled</span> tel:<br> 502 708 665</div>
-                        <div class="d2"><span class="material-symbols-outlined">mail</span> mail:<br> dawid.mozdzonek@gmail.com</div>
-                    </div>
-</section>
+        </section>
         <a href="#menues">
             <div class="menues"><span class="material-symbols-outlined">arrow_back</span></div>
         </a>
@@ -179,6 +168,18 @@ school
         </div>
 
     </main>
+        <footer id="kontakt">
+        <div class="reszta">
+            <div class="danek">
+                <div class="wwa">
+                    <div class="www">
+                        <div class="d1"><span class="material-symbols-outlined">phone_enabled</span> tel:<br> 502 708 665</div>
+                        <div class="d2"><span class="material-symbols-outlined">mail</span> mail:<br> dawid.mozdzonek@gmail.com</div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
 <script>
   const boxes = document.querySelectorAll('.a0');
 
@@ -194,7 +195,6 @@ school
 <script src="script.js"></script>
 </body>
 </html>
-
 
 
 
