--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <title>Dawid Możdżonek - Oficjalna Strona</title>
@@ -195,6 +195,7 @@ school
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
