--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ Mam nadzieję, że treści zawarte na stronie będą dla Ciebie interesujące i 
         <div class="TRES">
             <article>
                 <header class="podnag">ZAWÓD</header>
-                <p class="podp">Niezbyt mądry tweet nie dodaje prestiżu dziennikarzom internetowym, dla których praca w domu to chleb powszedni i najlepiej byłoby na takie wynurzenia spuścić zasłonę milczenia. Tymczasem rozpętała się wokół nich gorąca dyskusja. W jej ramach jeden z urzędników Ministerstwa Spraw Zagranicznych pochwalił się swoim rozkładem dnia: „Śniadanie. Maile. Telefony. Przejazd do MSZ. Sztab Kryzysowy. Maile. Rządowy Zespół Kryzysowy. Pierwsza kawa. Maile. Dyrektorzy. Depesze. Maile. Kanapka od żony. Maile. Wideokonf. Telefony. Wywiad. Maile. Telekonf. Sztab. Powrót. Wyrzuty sumienia przed dziećmi. Spanie. Śniadanie”. Wprawdzie zarobiony po pachy urzędnik skarży się, że nie ma wolnej chwili dla swoich pociech, ale znajduje czas na lans w mediach społecznościowych. Co zresztą zostało mu wypomniane: „Zapomniał Pan o Twitterze… dużo Pana tu”.</p>
+                <p class="podp">  Zaklinacz Szczurów i Kreatywny Rozrabiaka
+Na co dzień rozmawiam ze szczurami, uczę je sztuczek i negocjuję warunki umów między mrówkami a świerszczami. Kiedy nie zaklinam gryzoni, wymyślam pomysły, które nawet lisy uznałyby za zbyt odważne.</p>
             </article>
             <article>
                 <header class="podnag">DOŚWIAT</header>
@@ -196,6 +197,7 @@ school
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
