--- a/index.html
+++ b/index.html
@@ -48,8 +48,16 @@ Mam nadzieję, że treści zawarte na stronie będą dla Ciebie interesujące i 
         <div class="TRES">
             <article>
                 <header class="podnag">ZAWÓD</header>
-                <p class="podp">  Zaklinacz Szczurów i Kreatywny Rozrabiaka
-Na co dzień rozmawiam ze szczurami, uczę je sztuczek i negocjuję warunki umów między mrówkami a świerszczami. Kiedy nie zaklinam gryzoni, wymyślam pomysły, które nawet lisy uznałyby za zbyt odważne.</p>
+                <p class="podp"> Zaklinacz Szczurów i Kreatywny Rozrabiaka
+
+Na co dzień rozmawiam ze szczurami, uczę je sztuczek i negocjuję warunki umów między mrówkami a świerszczami. Każdego ranka sprawdzam prognozę pogody dla chomików i upewniam się, że wszystkie wiewiórki mają swoje ulubione orzechy w odpowiedniej kolejności. Czasem organizuję zebrania dla nietoperzy, żeby przedyskutować strategie lotów i nowe trendy w echolokacji.
+
+Kiedy nie zaklinam gryzoni, wymyślam pomysły, które nawet lisy uznałyby za zbyt odważne, a jeże próbują powtarzać w domu, choć nie zawsze im wychodzi. Moja praca wymaga cierpliwości, odwagi i umiejętności prowadzenia negocjacji w sytuacjach, w których psy i koty próbują wtrącać się do rozmów.
+
+Dodatkowo, jestem odpowiedzialny za rozwój kreatywności wśród wszystkich stworzeń, które uznają mnie za swojego przewodnika. Niektóre dni spędzam na nauce języka żab i interpretowaniu poezji mrówek. Inne dni poświęcam na projektowanie miniaturowych scenariuszy dramatycznych dla wiewiórek, które marzą o karierze teatralnej.
+
+W skrócie, jestem kimś w rodzaju międzygatunkowego doradcy, konsultanta od chaosu i mistrza improwizacji w świecie, gdzie szczury, żaby i mrówki mają swoje prawa i ambicje. I tak, czasami zdarza się, że szczury patrzą na mnie z powagą, a ja po prostu kiwam głową i mówię: „Spokojnie, wszystko jest pod kontrolą… prawie”.
+ </p>
             </article>
             <article>
                 <header class="podnag">DOŚWIAT</header>
@@ -197,6 +205,7 @@ school
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
