--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <section class="centrum">
             <div class="content">
-                <header class="nagl">Cześć |</header>
+                <header class="nagl0">Cześć |</header>
                 <p class="ppp">Witaj na mojej stronie osobistej.
 Nazywam się <span class="bold">Dawid</span> i cieszę się, że tu trafiłeś.
 Na tej stronie znajdziesz informacje o mojej edukacji, doświadczeniu zawodowym, umiejętnościach oraz projektach, które realizowałem.
@@ -120,8 +120,8 @@ W skrócie, jestem kimś w rodzaju międzygatunkowego doradcy, konsultanta od ch
         <section class="Galeria">
         <div class="wypo2">
         </div>
-        <div class="nagl33">
-            <header class="nagl">Galeria <span class="material-symbols-outlined">gallery_thumbnail</span></header>
+        <div class="nagl">
+            <header class="nagl">Galeria <span class="material-symbols-outlined galery-ikona">gallery_thumbnail</span></header>
         </div>
         <div class="zeg">
              <div class="sytuacje" style="background-image: url(/Users/dawid/Desktop/stronaM/gor1.jpg);"></div>
@@ -171,7 +171,7 @@ school
         </div>
         </section>
         <a href="#menues">
-            <div class="menues"><span class="material-symbols-outlined">arrow_back</span></div>
+            <div class="menues"><span class="material-symbols-outlined galery-ikona">arrow_back</span></div>
         </a>
                 </div>
             </div>
@@ -205,7 +205,6 @@ school
 <script src="script.js"></script>
 </body>
 </html>
-
 
 
 
