--- a/index.html
+++ b/index.html
@@ -125,13 +125,12 @@ W skrócie, jestem kimś w rodzaju międzygatunkowego doradcy, konsultanta od ch
             <header class="nagl">Galeria <span class="material-symbols-outlined galery-ikona">gallery_thumbnail</span></header>
         </div>
         <div class="zeg">
-             <div class="sytuacje" style="background-image: url(/Users/dawid/Desktop/stronaM/gor1.jpg);"></div>
-             <div class="sytuacje" style="background-image: url(/Users/dawid/Desktop/stronaM/atenty1.jpg);"></div>
-             <div class="sytuacje" style="background-image: url(/Users/dawid/Desktop/stronaM/karaiby1.jpg);"></div>  
-            <div class="sytuacje" style="background-image: url(/Users/dawid/Desktop/stronaM/karaiby2.jpg);"></div>
-            <div class="sytuacje" style="background-image: url(/Users/dawid/Desktop/stronaM/oman1.jpg);"></div>
-            <div class="sytuacje" style="background-image: url(/Users/dawid/Desktop/stronaM/grozja1.jpg);"></div>
-
+            <div class="sytuacje" style="background-image: url('zdjecia_git/gor1.jpg');"></div>
+            <div class="sytuacje" style="background-image: url('zdjecia_git/atenty1.jpg');"></div>
+            <div class="sytuacje" style="background-image: url('zdjecia_git/karaiby1.jpg');"></div>
+            <div class="sytuacje" style="background-image: url('zdjecia_git/karaiby2.jpg');"></div>
+            <div class="sytuacje" style="background-image: url('zdjecia_git/oman1.jpg');"></div>
+            <div class="sytuacje" style="background-image: url('zdjecia_git/grozja1.jpg');"></div
         </div>
         </section>
         <div class="wypo2">
@@ -206,6 +205,7 @@ school
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
