--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
+      <!-- ekran ładowania -->
+  <div id="loading-screen">
+      <div class="loader"></div>
+  </div>
  <header id="menues">
       <div class="menu-toggle" id="menu-toggle">☰  Dawid Mozdzonek</div>
         <div class="menu" id="menu">
@@ -48,7 +52,7 @@ Mam nadzieję, że treści zawarte na stronie będą dla Ciebie interesujące i 
         <div class="TRES">
             <article>
                 <header class="podnag">ZAWÓD</header>
-                <p class="podp"> Zaklinacz Szczurów i Kreatywny Rozrabiaka
+                <p class="podp"> runo twórca / 
 
 Na co dzień rozmawiam ze szczurami, uczę je sztuczek i negocjuję warunki umów między mrówkami a świerszczami. Każdego ranka sprawdzam prognozę pogody dla chomików i upewniam się, że wszystkie wiewiórki mają swoje ulubione orzechy w odpowiedniej kolejności. Czasem organizuję zebrania dla nietoperzy, żeby przedyskutować strategie lotów i nowe trendy w echolokacji.
 
