--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
       <!-- ekran ładowania -->
@@ -38,7 +41,7 @@
         <section class="centrum">
             <div class="content">
                 <header class="nagl0">Cześć |</header>
-                <p class="ppp">Witaj na mojej stronie osobistej.
+                <p class="pppG">Witaj na mojej stronie osobistej.
 Nazywam się <span class="bold">Dawid</span> i cieszę się, że tu trafiłeś.
 Na tej stronie znajdziesz informacje o mojej edukacji, doświadczeniu zawodowym, umiejętnościach oraz projektach, które realizowałem.
 To cyfrowe CV w przystępnej formie, które pozwala szybko zapoznać się z moją osobą i moimi osiągnięciami.
@@ -51,24 +54,32 @@ Mam nadzieję, że treści zawarte na stronie będą dla Ciebie interesujące i 
         <section id="praca">
         <div class="TRES">
             <article>
-                <header class="podnag">ZAWÓD</header>
-                <p class="podp"> runo twórca / 
-
-Na co dzień rozmawiam ze szczurami, uczę je sztuczek i negocjuję warunki umów między mrówkami a świerszczami. Każdego ranka sprawdzam prognozę pogody dla chomików i upewniam się, że wszystkie wiewiórki mają swoje ulubione orzechy w odpowiedniej kolejności. Czasem organizuję zebrania dla nietoperzy, żeby przedyskutować strategie lotów i nowe trendy w echolokacji.
-
-Kiedy nie zaklinam gryzoni, wymyślam pomysły, które nawet lisy uznałyby za zbyt odważne, a jeże próbują powtarzać w domu, choć nie zawsze im wychodzi. Moja praca wymaga cierpliwości, odwagi i umiejętności prowadzenia negocjacji w sytuacjach, w których psy i koty próbują wtrącać się do rozmów.
-
-Dodatkowo, jestem odpowiedzialny za rozwój kreatywności wśród wszystkich stworzeń, które uznają mnie za swojego przewodnika. Niektóre dni spędzam na nauce języka żab i interpretowaniu poezji mrówek. Inne dni poświęcam na projektowanie miniaturowych scenariuszy dramatycznych dla wiewiórek, które marzą o karierze teatralnej.
-
-W skrócie, jestem kimś w rodzaju międzygatunkowego doradcy, konsultanta od chaosu i mistrza improwizacji w świecie, gdzie szczury, żaby i mrówki mają swoje prawa i ambicje. I tak, czasami zdarza się, że szczury patrzą na mnie z powagą, a ja po prostu kiwam głową i mówię: „Spokojnie, wszystko jest pod kontrolą… prawie”.
+                <header class="podnag">UMIEJEN</header>
+                <p class="podp"> umiejętności specjalistyczne:<br><br>
+                    <br>
+                    - blaBLAblaBLAblaBLA <br>
+                    <br>
+                    - blaBLAblaBLAbla <br>
+                    <br>
+                    - blaBLAblaBLAblaBLA <br>
+                    <br>
+                    - BLAblaBLAblaBLA <br>
+                    <br>
+                    - blaBLAblaBLAblaBLA <br>
+                    <br>
+                    umiejętności mietkie:<br><br>
+                    <br>
+                    - blaBLAblaBLAblaBLA <br>
+                    <br>
+                    - blaBLAblaBLAblaBLA <br>
  </p>
             </article>
             <article>
-                <header class="podnag">DOŚWIAT</header>
+                <header class="podnag">DOŚWIADCZENIE</header>
                 <p class="podp">Niezbyt mądry tweet nie dodaje prestiżu dziennikarzom internetowym, dla których praca w domu to chleb powszedni i najlepiej byłoby na takie wynurzenia spuścić zasłonę milczenia. Tymczasem rozpętała się wokół nich gorąca dyskusja. W jej ramach jeden z urzędników Ministerstwa Spraw Zagranicznych pochwalił się swoim rozkładem dnia: „Śniadanie. Maile. Telefony. Przejazd do MSZ. Sztab Kryzysowy. Maile. Rządowy Zespół Kryzysowy. Pierwsza kawa. Maile. Dyrektorzy. Depesze. Maile. Kanapka od żony. Maile. Wideokonf. Telefony. Wywiad. Maile. Telekonf. Sztab. Powrót. Wyrzuty sumienia przed dziećmi. Spanie. Śniadanie”. Wprawdzie zarobiony po pachy urzędnik skarży się, że nie ma wolnej chwili dla swoich pociech, ale znajduje czas na lans w mediach społecznościowych. Co zresztą zostało mu wypomniane: „Zapomniał Pan o Twitterze… dużo Pana tu”.</p>
             </article>
             <article>
-                <header class="podnag">UMIEJEN</header>
+                <header class="podnag">ZAINTERESOWANIA</header>
                 <p class="podp">Niezbyt mądry tweet nie dodaje prestiżu dziennikarzom internetowym, dla których praca w domu to chleb powszedni i najlepiej byłoby na takie wynurzenia spuścić zasłonę milczenia. Tymczasem rozpętała się wokół nich gorąca dyskusja. W jej ramach jeden z urzędników Ministerstwa Spraw Zagranicznych pochwalił się swoim rozkładem dnia: „Śniadanie. Maile. Telefony. Przejazd do MSZ. Sztab Kryzysowy. Maile. Rządowy Zespół Kryzysowy. Pierwsza kawa. Maile. Dyrektorzy. Depesze. Maile. Kanapka od żony. Maile. Wideokonf. Telefony. Wywiad. Maile. Telekonf. Sztab. Powrót. Wyrzuty sumienia przed dziećmi. Spanie. Śniadanie”. Wprawdzie zarobiony po pachy urzędnik skarży się, że nie ma wolnej chwili dla swoich pociech, ale znajduje czas na lans w mediach społecznościowych. Co zresztą zostało mu wypomniane: „Zapomniał Pan o Twitterze… dużo Pana tu”.</p>
             </article>
         </div>
@@ -152,7 +163,7 @@ W skrócie, jestem kimś w rodzaju międzygatunkowego doradcy, konsultanta od ch
         </div>
         <section class="Edukacjia">
         <div class="nagl">
-            <header class="nagl">Edukacjia <span class="material-symbols-outlined">
+            <header class="nagleduka">Edukacjia <span class="material-symbols-outlined">
 school
 </span></header>
         </div>
@@ -160,7 +171,7 @@ school
             <p><br><br></p>
             <p>2022 – 2025<br>Technikum<br></p>
             <p class="p2">Zespół Szkół Rzemiosł Artystycznych im. Stanisława Wyspiańskiego w Jeleniej Górze</p>
-            <p><br><br></p>
+            <p><br>_______________<br></p>
         </div>
 
         <div class="nauka">
@@ -205,7 +216,6 @@ school
 <script src="script.js"></script>
 </body>
 </html>
-
 
 
 
