Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <section class="section-dlaczego" id="dlaczego-ekologia">
             <div class="div1">
-                <img id="rotator" src="/Users/dawid/Downloads/do_nowej_szare.jpg" alt="Slider" style="width: 100%; height: 100%;">
+                <img id="rotator" src="./zd_daw/do_nowej_szare.jpg" alt="Slider" style="width: 100%; height: 100%;">
             </div>
                 <div class="div2">
                     <div class="ramka">
@@ -75,7 +75,7 @@
                 </div>
                 </div>
                 <div class="obraz-edukacjia">
-                    <img src="/Users/dawid/Downloads/edukacja_2.jpg" alt="Slider">
+                    <img src="./zd_daw/edukacja_2.jpg" alt="Slider">
                 </div>
             </div>
         </section>
@@ -144,17 +144,17 @@ Ta galeria nie próbuje niczego udowadniać ani sprzedawać. To raczej cichy zap
                 </div>
                 <div class="galerie">
                 <div class="galeria-obrazy">
-                    <img src="/Users/dawid/Downloads/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-1">
-                    <img src="/Users/dawid/Downloads/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-2">
-                    <img src="/Users/dawid/Downloads/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-2">
+                    <img src="./zd_daw/naj-gal1.jpeeg" alt="Slider" class="galeria-img obraz-gal-1">
+                    <img src="./zd_daw/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-2">
+                    <img src="./zd_daw/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-2">
                 </div>
                 <div class="galeria-obrazy2">
-                    <img src="/Users/dawid/Downloads/naj-gal-2.jpg" alt="Slider" class="galeria-img obraz-gal-1">
-                    <img src="/Users/dawid/Downloads/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-2">
+                    <img src="./zd_daw/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-1">
+                    <img src="./zd_daw/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-2">
                 </div>
                 <div class="galeria-obrazy2">
-                    <img src="/Users/dawid/Downloads/naj-gal-2.jpg" alt="Slider" class="galeria-img obraz-gal-1">
-                    <img src="/Users/dawid/Downloads/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-2">
+                    <img src="./zd_daw/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-1">
+                    <img src="./zd_daw/naj-gal1.jpeg" alt="Slider" class="galeria-img obraz-gal-2">
                 </div>
                 </div>
             </div>
