--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <li><a class="a0" href="#porady">B I O G R A F I A</a>
                         <ul class="lista" id="lista">
                             <li class="li-lista"><a class="li-lista" href="#porady">E D U K A C J A</a></li>
-                            <li class="li-lista">Ż Y C I E</li>
-                            <li class="li-lista">P O L S K A</li>
+                            <li class="li-lista"><a class="li-lista" href="#porady">P O D R Ó Ż E</a></li>
+                            <li class="li-lista"><a class="li-lista" href="#galeria">G A L E R I A</a></li>
                         </ul>
                     </li>
                     </li>
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </section>
-        <section class="podroze">
+        <section class="podroze" id="poruze">
             <header class="podoze-heder">
                 <div class="zanzwa-kontynety">kontynenty:</div>
                 <div class="liczba-kontynety"><div class="liczba-k">4</div></div>
@@ -89,51 +89,51 @@
             <div class="okontyntenty">
                 <div class="kontynet ameryka">AMERYKI
                     <ul class="ul-kraje">
-                        <li>USA</li>
-                        <li>Kajmany</li>
-                        <li>Belize</li>
-                        <li>Kuba</li>
-                        <li>Jamajka</li>
-                        <li>Wyspy Dziewicze</li>
-                        <li>Martynika</li>
+                        <li>-USA-</li>
+                        <li>-Kajmany-</li>
+                        <li>-Belize-</li>
+                        <li>-Kuba-</li>
+                        <li>-Jamajka-</li>
+                        <li>-Wyspy Dziewicze-</li>
+                        <li>-Martynika-</li>
 
                     </ul>
                 </div>
                 <div class="kontynet afryka">AFRYKA
                     <ul class="ul-kraje">
-                        <li>egipt</li>
+                        <li>-egipt-</li>
                     </ul>
                 </div>
                 <div class="kontynet azja">AZJA
                     <ul class="ul-kraje">
-                        <li>Turcja</li>
-                        <li>Tajlandia</li>
-                        <li>Oman</li>
-                        <li>Katar</li>
+                        <li>-Turcja-</li>
+                        <li>-Tajlandia-</li>
+                        <li>-Oman-</li>
+                        <li>-Katar-</li>
                     </ul>
                 </div>
                 <div class="kontynet europa">EUROPA
                     <ul class="ul-kraje">
-                        <li>Francja</li>
-                        <li>Niemcy</li>
-                        <li>Polska❤️</li>
-                        <li>Hiszpania</li>
-                        <li>Portugalia</li>
-                        <li>Włochy</li>
-                        <li>Czechy</li>
-                        <li>Austria</li>
-                        <li>Czarnogóra</li>
-                        <li>Albania</li>
-                        <li>Serbia</li>
-                        <li>Wielka Brytania</li>
-                        <li>Szwecja</li>
-                        <li>Grecja</li>
-                        <li>Gruzja</li>
+                        <li>-Francja-</li>
+                        <li>-Niemcy-</li>
+                        <li>-Polska❤️-</li>
+                        <li>-Hiszpania-</li>
+                        <li>-Portugalia-</li>
+                        <li>-Włochy-</li>
+                        <li>-Czechy-</li>
+                        <li>-Austria-</li>
+                        <li>-Czarnogóra-</li>
+                        <li>-Albania-</li>
+                        <li>-Serbia-</li>
+                        <li>-Wielka Brytania-</li>
+                        <li>-Szwecja-</li>
+                        <li>-Grecja-</li>
+                        <li>-Gruzja-</li>
                     </ul>
                 </div>
             </div>
         </section>
-        <section class="section-porady" id="porady">
+        <section class="section-porady" id="galeria">
             <div class="galeria-divy">
                 <div class="ramka3">
                 <div class="galeria-tekst2">
