--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
             </div>
                 <div class="div2">
                     <div class="ramka">
-                        <header class="heder2">Cześć</header>
+                                <p class="p-nd">O mnie</p>
+                        <header class="heder2">CZEŚĆ</header>
                             <div class="pomoc">
-                                <p class="p">Jestem Dawid i witam Cię na mojej stronie, miejscu, gdzie zbieram wszystkie swoje projekty, przemyślenia i rzeczy, które uważam za warte pokazania. To nie jest tylko zwykłe portfolio, ale przestrzeń, która ma oddawać część mojej osobowości i stylu myślenia, pokazywać, co mnie inspiruje, co mnie śmieszy i czym zajmuję się na co dzień. Każdy element strony, od tekstów po drobne detale wizualne, został tu umieszczony świadomie, żeby całość tworzyła spójny obraz tego, kim jestem. Chcę, żeby każdy, kto tu zajrzy, poczuł trochę mojego stylu i miał okazję zobaczyć, jak wygląda moja codzienność, a także żeby odkrył tu trochę humoru i luzu w tym, co robię.</p>
+                                <p class="p">Jestem Dawid i witam Cię na mojej stronie, miejscu, gdzie zbieram wszystkie swoje projekty, przemyślenia i rzeczy, które uważam za warte pokazania. To nie jest tylko zwykłe portfolio, ale przestrzeń, która ma oddawać część mojej osobowości i stylu myślenia, pokazywać, co mnie inspiruje, co mnie śmieszy i czym zajmuję się na co dzień</p>
                              </div>
                         <button class="button-wiecej" id="button-wiecej">
                             <a href="#" id="pokazModal" class="more-link">prew</a>
@@ -67,7 +68,7 @@
             <div class="edukacjia">
                 <div class="text-edukacjia">
                 <div class="ramka2">
-                    <header class="edukacjia-header">Edukacjia</header>
+                    <header class="edukacjia-header">EDUKACJA</header>
                     <div class="data-edukacji">2014 – 2022</div>
                     <p class="text-p-edukacja">Szkoła Podstawowa nr 104 im. <br>Macieja Rataja w Warszawie</p>
                     <div class="data-edukacji">2022 – 2026</div>
