--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
             <h1 class="htext" id="htext" data-text="Możdżonek">Możdżonek</h1>
         </header>
     </section>
+    <section class="ikonki-tylko-tel">
+        <p class="pop">facebook</p>
+        <div class="mpun facebook">
+        <a href="https://www.facebook.com/SargeThePlayer" target="_blank">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        </div>
+        <div class="mpun instagram">
+        <a href="https://www.instagram.com/robertmaklowicz_official/" target="_blank">
+            <i class="fab fa-instagram"></i>
+        </a>
+        </div>       
+        <p class="pop">instagram</p>
+    </section>
     <main>
         <section class="section-dlaczego" id="dlaczego-ekologia">
             <div class="div1">
@@ -68,6 +82,7 @@
             <div class="edukacjia">
                 <div class="text-edukacjia">
                 <div class="ramka2">
+                   <p class="p-nd">Biografia</p>
                     <header class="edukacjia-header">EDUKACJA</header>
                     <div class="data-edukacji">2014 – 2022</div>
                     <p class="text-p-edukacja">Szkoła Podstawowa nr 104 im. <br>Macieja Rataja w Warszawie</p>
