--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                     <a class="dolacz-do-nas" href="zadanie2.html">K O N T A K T</a>
                 </aside>
             </nav>
-            <h3 class="znaki">成分：小麦粉 | 盐 | 胡说八道 | 调味料 |</h3>
+            <h3 class="znaki">成分：小麦粉  盐  胡说八道  调味料 </h3>
             <h2 class="htext2" id="htext2" data-text="Dawid">Dawid</h2>
             <h1 class="htext" id="htext" data-text="Możdżonek">Możdżonek</h1>
         </header>
     </section>
     <section class="ikonki-tylko-tel">
         <p class="pop">facebook</p>
-        <div class="mpun facebook">
+        <div class="mpun facebook obdyp">
         <a href="https://www.facebook.com/SargeThePlayer" target="_blank">
             <i class="fab fa-facebook-f"></i>
         </a>
         </div>
-        <div class="mpun instagram">
+        <div class="mpun instagram obdyp">
         <a href="https://www.instagram.com/robertmaklowicz_official/" target="_blank">
             <i class="fab fa-instagram"></i>
         </a>
@@ -132,7 +132,7 @@
                     <ul class="ul-kraje">
                         <li>-Francja-</li>
                         <li>-Niemcy-</li>
-                        <li>-Polska❤️-</li>
+                        <li>-Polska-</li>
                         <li>-Hiszpania-</li>
                         <li>-Portugalia-</li>
                         <li>-Włochy-</li>
