--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>Document</title>
 </head>
 <body>
+<div id="loader">
+  <div class="spinner"></div>
+  <div class="spinner ring-dwa"></div>
+<div class="spinner ring-trzy"></div>
+</div>
     <section class="naglowek" id="naglowek">
         <header>
             <div class="X-menu"><button class="burger" aria-label="Menu"><span></span><span></span><span></span></button></div><div id="overlay"></div>
@@ -176,8 +181,11 @@ Ta galeria nie próbuje niczego udowadniać ani sprzedawać. To raczej cichy zap
                 </div>
             </div>
         </section>
+        <div id="cookie-overlay"></div>
         <div id="cookie-banner">
-            <p class="p-coo">Niniejsza strona internetowa korzysta z usług i zasobów pochodzących od podmiotów zewnętrznych, w tym między innymi Google Fonts, które mogą zbierać, przechowywać i przetwarzać dane użytkowników, w tym adresy IP, informacje o urządzeniu oraz dane przeglądarki. Korzystanie z tych zasobów odbywa się zgodnie z obowiązującymi przepisami prawa, w tym z przepisami o ochronie danych osobowych i polityką prywatności dostawców zewnętrznych. Użytkownik wyraża zgodę na przetwarzanie danych niezbędnych do wyświetlania zasobów zewnętrznych lub może odmówić wyrażenia takiej zgody, w wyniku czego dostęp do części funkcjonalności strony może być ograniczony lub niemożliwy.</p>
+
+            <p class="p-coo">Niniejsza strona internetowa korzysta z usług i zasobów pochodzących od podmiotów zewnętrznych, w tym między innymi Google Fonts, które mogą zbierać, przechowywać i przetwarzać dane użytkowników, w tym adresy IP, informacje o urządzeniu oraz dane przeglądarki. Korzystanie z tych zasobów odbywa się zgodnie z obowiązującymi przepisami prawa, w tym z przepisami o ochronie danych osobowych i polityką prywatności dostawców zewnętrznych. Użytkownik wyraża zgodę na przetwarzanie danych niezbędnych do wyświetlania zasobów zewnętrznych lub może odmówić wyrażenia takiej zgody, w wyniku czego dostęp do części funkcjonalności strony może być ograniczony lub niemożliwy.
+         <a class="a1" href="polityka-prywatnosci.html">polityka-prywatnosci</a></p>
         <button id="accept" class="accept">Akceptuję</button>
         <button id="reject" class="delete">Odrzucam</button>
         </div>
