--- a/index.html
+++ b/index.html
@@ -181,9 +181,18 @@ Ta galeria nie próbuje niczego udowadniać ani sprzedawać. To raczej cichy zap
                 </div>
             </div>
         </section>
+        <div class="inwalida">
+        <div class="lista-inwalicka" id="lista-inwalicka">
+            <div class="do-ukrycia">
+                <div class="poza wysoki-kontrast"><button id="wysoki-kontrast"><span class="material-symbols-outlined">contrast</span></button></div></div>          
+                <div class="poza tryb-ciemny"><button id="toggle-theme"><span class="material-symbols-outlined inwalidaa">dark_mode</span></button></div>
+            </div>
+            <div class="inwalida-poz" id="inwalida-poz"><span class="material-symbols-outlined inwalidaa">accessible_forward</span></div>
+        </div>
+        </div>
+        </div>
         <div id="cookie-overlay"></div>
         <div id="cookie-banner">
-
             <p class="p-coo">Niniejsza strona internetowa korzysta z usług i zasobów pochodzących od podmiotów zewnętrznych, w tym między innymi Google Fonts, które mogą zbierać, przechowywać i przetwarzać dane użytkowników, w tym adresy IP, informacje o urządzeniu oraz dane przeglądarki. Korzystanie z tych zasobów odbywa się zgodnie z obowiązującymi przepisami prawa, w tym z przepisami o ochronie danych osobowych i polityką prywatności dostawców zewnętrznych. Użytkownik wyraża zgodę na przetwarzanie danych niezbędnych do wyświetlania zasobów zewnętrznych lub może odmówić wyrażenia takiej zgody, w wyniku czego dostęp do części funkcjonalności strony może być ograniczony lub niemożliwy.
          <a class="a1" href="polityka-prywatnosci.html">polityka-prywatnosci</a></p>
         <button id="accept" class="accept">Akceptuję</button>
