Fix HTML structure and update privacy policy content

--- a/polityka-prywatnosci.html
+++ b/polityka-prywatnosci.html
@@ -17,10 +17,10 @@
 </head>
 <body class="body2">
     <main class="main2">
-        <div class="powrot"><a class="a2" href="index.html.html">x</a></div>
+        <div class="powrot"><a class="a2" href="./index.html.html">x</a></div>
         <h1 class="prh1">Polityka prywatności</h1>
 
-        <p class="p-pp">Administratorem danych osobowych jest Dawid Mozdzonek. Kontakt: <a href="mailto:twojemail@example.com">twojemail@example.com</a>.</p>
+        <p class="p-pp">Administratorem danych osobowych jest podmiot ja. Kontakt: <a href="mailto:twojemail@example.com">twojemail@example.com</a>.</p>
 
         <h2 class="prh2">§1.Jakie dane zbieramy</h2>
         <p class="p-pp">Na tej stronie zbieramy wyłącznie informacje niezbędne do poprawnego działania serwisu, takie jak ustawienia motywu (ciemny/jasny) przechowywane w przeglądarce w localStorage. Nie zbieramy żadnych danych osobowych, chyba że użytkownik dobrowolnie je przekaże np. w formularzu kontaktowym.</p>
@@ -44,6 +44,5 @@
     </main>
 </body>
 </html>
-
 </body>
 </html>
